--- a/recapsimple.html
+++ b/recapsimple.html
@@ -84,7 +84,7 @@
                     <th>BCGCS Quantité <button onclick="filterNonZero(7)">Voir</button></th>
                     <th>TLCS80A Quantité <button onclick="filterNonZero(8)">Voir</button></th>
                     <th>TNP80 Quantité <button onclick="filterNonZero(9)">Voir</button></th>
-                    <th>TNBAY80 Quantité <button onclick="filterNonZero(10)">Voir</button></th>
+                    <th>TNCERT80A Quantité <button onclick="filterNonZero(10)">Voir</button></th>
                     <th>TBA80 Quantité <button onclick="filterNonZero(11)">Voir</button></th>
                     <th>PCL110 Quantité <button onclick="filterNonZero(12)">Voir</button></th>
                     <th>PCLC110 Quantité <button onclick="filterNonZero(13)">Voir</button></th>
@@ -146,7 +146,7 @@
                     <td>${item.BCGCS_quantity}</td>
                     <td>${item.TLCS80A_quantity}</td>
                     <td>${item.TNP80_quantity}</td>
-                    <td>${item.TNBAY80_quantity}</td>
+                    <td>${item.TNCERT80A_quantity}</td>
                     <td>${item.TBA80_quantity}</td>
                     <td>${item.PCL110_quantity}</td>
                     <td>${item.PCLC110_quantity}</td>
